[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Entities/Circle_(Player)/Circle_(Player).gd" type="Script" id=1]
[ext_resource path="res://Objects/Structures/The_Core/The_Core.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83.5, 84 )

[node name="Circle_(Player)" type="KinematicBody2D" groups=["Player"]]
position = Vector2( 512, 300 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../../Camera2D")

[node name="SpellZone" type="Area2D" parent="."]

[node name="SpellShape" type="CollisionShape2D" parent="SpellZone"]
shape = SubResource( 2 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="SpellZone/SpellShape"]
margin_left = -83.0
margin_top = -85.0
margin_right = 85.0
margin_bottom = 83.0
color = Color( 0, 0, 0, 0.584314 )

[node name="Timer" type="Timer" parent="SpellZone"]
wait_time = 3.0

[connection signal="timeout" from="SpellZone/Timer" to="." method="_on_Timer_timeout"]
